--- a/index.html
+++ b/index.html
@@ -5,31 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>   
     <link rel="shortcut icon" href="/assents/favicon.png" type="imagem/x-icon">
-    <link rel="stylesheet" href="/assents/css/style.css"
+<link rel="stylesheet" href="/assents/css/style.css"
+
 </head>
+
 <body>
+
 <header>
 <!--titulo-->
-<h1>SLAMDUNKER</h1>
+   <h1>SLAMDUNKER</h1> 
 </header>
-    <nav></nav>
+<div>
+    <nav>
+        <a href="index.html">pagina01</a>
+    </nav>
+
     <main>
-        <div>
-<img src="assents/fita de basquete.png" alt="fita de basquete da nba" width="25%" height="25%">
+        <div class="container1">   
+<img src="/assents/fita de basquete.png" alt="fita de basquete da nba" width="25%" height="25%">
 <img src="/assents/JORDAN.png" alt="Michael Jordan" width="25%" height="25%">
-<img src="/assents/Legend!🏆🏀.png" alt="Chicago">
+<img src="/assents/Legend!🏆🏀.png" alt="Chicago" width="25%" height="25%">
         </div>
 
+        <div class="container2">
     <h2>A NBA e Suas Eras: Uma Jornada Através do Tempo/A Era do Michael Jordan (1984-1998)</h2>
+       </div>
 <p>
 
     A National Basketball Association (NBA), fundada em 1946, é uma das ligas esportivas mais icônicas e influentes do mundo. Desde sua criação, a NBA evoluiu significativamente, 
     passando por várias eras distintas que moldaram o basquete e a cultura esportiva global. Este artigo explora as principais eras da NBA, destacando os marcos e as mudanças que definiram cada período.
+ Os anos 1990 foram, sem dúvida, dominados por Michael Jordan, cuja habilidade incomparável e mentalidade vencedora levaram o Chicago Bulls a seis campeonatos da NBA. Jordan, com seu estilo de jogo agressivo e capacidade de decisão em momentos críticos, redefiniu o que significava ser um campeão na NBA. A década também testemunhou o crescimento da popularidade global do basquete, com a NBA expandindo sua audiência e influência internacionalmente.
+    Durante este período, o basquete se tornou um fenômeno cultural global. A equipe dos Estados Unidos nos Jogos Olímpicos de 1992, conhecida como "Dream Team", ajudou a popularizar o esporte em todo o mundo e solidificou a NBA como a principal liga de basquete.
 </p>
-
-<h3> Os anos 1990 foram, sem dúvida, dominados por Michael Jordan, cuja habilidade incomparável e mentalidade vencedora levaram o Chicago Bulls a seis campeonatos da NBA. Jordan, com seu estilo de jogo agressivo e capacidade de decisão em momentos críticos, redefiniu o que significava ser um campeão na NBA. A década também testemunhou o crescimento da popularidade global do basquete, com a NBA expandindo sua audiência e influência internacionalmente.
-    Durante este período, o basquete se tornou um fenômeno cultural global. A equipe dos Estados Unidos nos Jogos Olímpicos de 1992, conhecida como "Dream Team", ajudou a popularizar o esporte em todo o mundo e solidificou a NBA como a principal liga de basquete.</h3>
-    </main>
+    </div>
+</main>
 <footer>@2024 - André Emilio.</footer>
 </body>
+
 </html>
