--- a/Portfolio-André Emílio/index.html
+++ b/Portfolio-André Emílio/index.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>   
-    <link rel="shortcut icon" href="/assents/favicon.png" type="imagem/x-icon">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon" href="../asents/icon/favicon.png" type="imagem/x-icon">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
@@ -44,11 +44,24 @@
         <article>
 
             <h2>Sobre Mim/Apresentação</h2>
+  
 
           </article>
+
           <article>
+
             <div class="content">
+
               <img src="./assets/André_IA.png" alt="André versão IA" width="30%" height="25%">
+
+              <a href="https://youtu.be/RjmFSNbaWCw?si=MN_UOrZLUCytRKrX" target="_blank">
+                <button id="botao-1"> 
+                  <img src="../assets/icon/piano.png">
+                  <span>Youtube</span>
+                </button>
+              </a>
+              </a>
+
               <p>
                 Conheçam André Emílio Ferraz, mais conhecido como Dedé! Aos 17 anos, Dedé já é um verdadeiro entusiasta musical. Ele é a mente brilhante por trás da LIO Studios e do projeto Antologia, onde realiza uma curadoria musical incrível, trazendo à tona os momentos mais marcantes da música brasileira.
               </p>
@@ -61,16 +74,27 @@
               <p>
                 Além de ser um ouvinte ávido, Dedé é um criador nato. Ele adora desenhar, cantar, compor e escrever poesia. Sua paixão e talento transparecem em cada projeto que ele abraça. Se você também é apaixonado por música e criatividade, não pode deixar de acompanhar o trabalho desse jovem talentosíssimo!
               </p>
-              <img src="./assets/fita de basquete.png" alt="fita de basquete da nba" width="30%" height="25%">
-              <img src="./assets/JORDAN.png" alt="Michael Jordan" width="25%" height="25%">
-              <img src="./assets/Legend!🏆🏀.png" alt="Chicago" width="25%" height="25%">
+
+              <img src="../assets/fita de basquete.png" alt="fita de basquete da nba" width="30%" height="25%">
+              <img src="../assets/JORDAN.png" alt="Michael Jordan" width="25%" height="25%">
+              <img src="../assets/Legend!🏆🏀.png" alt="Chicago" width="25%" height="25%">
+
+
               <h3>Quem Sou Eu?</h3>
+
               <p>
-                Sou André Emílio Ferraz, tenho 17 anos, e sou movido pela paixão em tudo que faço. Extrovertido, criativo e determinado, gosto de combinar minha energia com foco nas metas que estabeleço. Seja em momentos de descontração ou seriedade, procuro crescer e aprender sempre, acreditando que cada experiência traz a oportunidade de evoluir.
+                Sou André Emílio Ferraz, tenho 17 anos, e sou movido pela paixão em tudo que faço.
+              </p>
+              <p>
+              Extrovertido, criativo e determinado, gosto de combinar minha energia com foco nas metas que estabeleço.
+            </p> 
+            <p>
+            Seja em momentos de descontração ou seriedade, procuro crescer e aprender sempre, acreditando que cada experiência traz a oportunidade de evoluir.
               </p>
             </div>
           </article>
 </main>
+
 <footer>@2024 - André Emilio.</footer>
 
 <script src="./assets/js/scriptmq.js"></script>
