--- a/Portfolio-André Emílio/sobre.html
+++ b/Portfolio-André Emílio/sobre.html
@@ -6,10 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>   
-    <link rel="shortcut icon" href="/assents/favicon.png" type="imagem/x-icon">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="shortcut icon" href="../assets/icon/favicon.png" type="imagem/x-icon">
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
 <body onresize="mudouTamanho()">
@@ -46,10 +45,12 @@
     <h2>Desenvolvimento/Portifolio</h2>
 
         </article>
-<div class="content">
-   <article>    
+      <div class="content">
+         <article>    
 
-<h3>Experiências como Web Designer/Minhas Habilidades</h3>
+       <h3>Experiências como Web Designer/Minhas Habilidades</h3>
+
+<img src="../assets/André_IA.png" alt="André versão IA" width="30%" height="25%">
 
     <p>
         Ao longo do curso, meu desenvolvimento como web designer foi uma das partes mais enriquecedoras, tanto no aspecto pessoal quanto no profissional. Isso me proporcionou não apenas um crescimento individual, mas também ampliou minhas oportunidades no mercado de trabalho, oferecendo uma gama maior de habilidades profissionais.
@@ -58,11 +59,12 @@
         Um marco importante nesse processo foi o desenvolvimento do site da Mafre, logo no início do curso. Esse projeto me desafiou a aprender novas tecnologias e conceitos que, até então, eu sequer conhecia. Nas semanas seguintes, avancei em várias áreas da programação, aprofundando meu conhecimento em HTML e CSS. Mais recentemente, comecei a explorar o JavaScript, ampliando ainda mais minhas competências técnicas.
     
 </p>
-  <img src="./assets/img/milton.png" alt="milton" width="30%" height="25%">
 
-            <img src="./assets/sodastereo.png" alt="sodastereo" width="32%" height="25%">
+            <img src="../assets/img/milton.png" alt="milton" width="30%" height="25%">
 
-            <img src="./assets/abbeyroad.png" alt="thebeatles" width="25%" height="25%">
+            <img src="../assets/sodastereo.png" alt="sodastereo" width="32%" height="25%">
+
+            <img src="../assets/abbeyroad.png" alt="thebeatles" width="25%" height="25%">
  <p>
     Entre as minhas principais habilidades, destaco a minha comunicação eficaz, liderança natural e a capacidade de resolver conflitos de forma equilibrada.
 </p>
